adding test cases